Fix layout shift between pages by forcing consistent scrollbar

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -46,6 +46,7 @@
 html {
   min-height: 100%;
   font-size: 100% !important;
+  overflow-y: scroll;
 }
 
 /* ============================================
